--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "nodeunit": "0.9.1",
     "sandboxed-module": "2.0.3",
     "script-loader": "0.7.0",
+    "@tensorflow/tfjs": "^0.11.6",
+    "feature-scaler": "1.0.0",
     "webpack": "3.5.4"
   },
   "scripts": {
